--- a/books/Storyboards/Settings.storyboard
+++ b/books/Storyboards/Settings.storyboard
@@ -135,22 +135,25 @@
                             </tableViewSection>
                             <tableViewSection headerTitle="Debug" id="K29-za-7go">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="wK8-az-CPc" style="IBUITableViewCellStyleDefault" id="UJN-4s-R7o">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="deV-yO-fxn" style="IBUITableViewCellStyleDefault" id="nq9-f9-TaS">
                                         <rect key="frame" x="0.0" y="391" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UJN-4s-R7o" id="ee4-wI-CHA">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nq9-f9-TaS" id="fId-nN-NnC">
+                                            <rect key="frame" x="0.0" y="0.0" width="287" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Import Test Data" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wK8-az-CPc">
-                                                    <rect key="frame" x="15" y="0.0" width="290" height="43.5"/>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Debug Settings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="deV-yO-fxn">
+                                                    <rect key="frame" x="15" y="0.0" width="270" height="43.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="doM-K4-IpH" kind="showDetail" id="tht-if-4IG"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -162,12 +165,12 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Root View Controller" id="dAh-ED-Nhz"/>
                     <connections>
-                        <outlet property="addTestDataCell" destination="UJN-4s-R7o" id="U2P-03-knb"/>
+                        <outlet property="debugSettingsCell" destination="nq9-f9-TaS" id="QbK-V3-wFv"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I2D-fm-I5J" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="868" y="284.70764617691157"/>
+            <point key="canvasLocation" x="664" y="500"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="5LU-Ra-8GN">
@@ -183,9 +186,9 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bmV-zC-W8G" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1641" y="725"/>
+            <point key="canvasLocation" x="2085" y="416"/>
         </scene>
-        <!--Import Data View Controller-->
+        <!--Import Data-->
         <scene sceneID="GN5-pH-ozz">
             <objects>
                 <viewController id="GQ8-eA-Xpa" customClass="ImportDataViewController" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
@@ -198,11 +201,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="kJ5-WH-eWd"/>
+                    <navigationItem key="navigationItem" title="Import Data" id="kJ5-WH-eWd"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="75W-wS-h37" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2428" y="12"/>
+            <point key="canvasLocation" x="2762" y="-262"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Uee-4n-AoL">
@@ -218,7 +221,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7XL-y7-6gm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1682" y="12"/>
+            <point key="canvasLocation" x="2085" y="-261"/>
         </scene>
         <!--Attributions-->
         <scene sceneID="AQn-aB-NBm">
@@ -496,7 +499,42 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QLt-2m-pcu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2318" y="725"/>
+            <point key="canvasLocation" x="2762" y="415"/>
+        </scene>
+        <!--Debug Settings-->
+        <scene sceneID="B6T-EP-CJ4">
+            <objects>
+                <viewController id="IRj-Qq-Qby" customClass="DebugSettingsViewController" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="yH1-2Z-azR"/>
+                        <viewControllerLayoutGuide type="bottom" id="x6n-Ye-Jh3"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bhi-LB-Pdp">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Debug Settings" id="Bjk-M0-q8X"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jjH-9R-ieD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2762" y="1090"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="zie-jh-kkZ">
+            <objects>
+                <navigationController id="doM-K4-IpH" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="KF8-or-eV6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="IRj-Qq-Qby" kind="relationship" relationship="rootViewController" id="CRw-IQ-cKq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dhc-Bm-V0d" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2085" y="1090"/>
         </scene>
     </scenes>
 </document>
