--- a/books/Storyboards/BookDetails.storyboard
+++ b/books/Storyboards/BookDetails.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="svF-c1-e4g">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -17,45 +17,39 @@
                         <viewControllerLayoutGuide type="bottom" id="yel-qD-x6K"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="EZk-RK-IhE">
-                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WOs-nU-bp0">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qxc-PW-YFe" userLabel="ContentView">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="365"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="330.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The House of the Spirits" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bmm-uv-eym">
-                                                <rect key="frame" x="16" y="16" width="343" height="26.5"/>
+                                                <rect key="frame" x="14" y="16" width="292" height="26.5"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                                 <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Isabel Allende" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pRN-sy-kyO">
-                                                <rect key="frame" x="16" y="44.5" width="343" height="20.5"/>
+                                                <rect key="frame" x="14" y="44.5" width="292" height="20.5"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                 <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YTX-8q-xHR">
-                                                <rect key="frame" x="16" y="73" width="100" height="150"/>
+                                                <rect key="frame" x="14" y="73" width="100" height="150"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="100" id="3Q2-3B-6zf"/>
                                                     <constraint firstAttribute="height" constant="150" id="apa-Op-VGz"/>
                                                 </constraints>
                                             </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reading Log" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Apq-7i-XTA">
-                                                <rect key="frame" x="16" y="239" width="343" height="26.5"/>
-                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
-                                                <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lv9-nn-Tne">
-                                                <rect key="frame" x="16" y="273.5" width="343" height="83.5"/>
+                                                <rect key="frame" x="14" y="239" width="292" height="83.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rhe-Rl-p1n">
-                                                        <rect key="frame" x="99.5" y="8" width="145.5" height="37.5"/>
+                                                        <rect key="frame" x="74" y="8" width="145.5" height="37.5"/>
                                                         <attributedString key="attributedText">
                                                             <fragment content="Unknown State 12 Oct - 2 Nov 2015">
                                                                 <attributes>
@@ -68,7 +62,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9jd-vS-BiD">
-                                                        <rect key="frame" x="146.5" y="49.5" width="51" height="30"/>
+                                                        <rect key="frame" x="121" y="49.5" width="51" height="30"/>
                                                         <state key="normal" title="Update"/>
                                                         <connections>
                                                             <segue destination="V1o-Ej-YdK" kind="presentation" modalPresentationStyle="formSheet" id="cDq-a6-vvx"/>
@@ -85,7 +79,7 @@
                                                 </constraints>
                                             </view>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mid-NB-7DT">
-                                                <rect key="frame" x="124" y="73" width="235" height="150"/>
+                                                <rect key="frame" x="122" y="73" width="184" height="150"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <string key="text">Spanning four generations, Isabel Allende's magnificent family saga is populated by a memorable, often eccentric, cast of characters. Together, men and women, spirits, the forces of nature and of history, converge in an unforgettable, wholly absorbing and brlliantly realised novel that is as richly entertaining as it is a masterpiece of modern literature.</string>
                                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -95,24 +89,21 @@
                                         </subviews>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
+                                            <constraint firstItem="Lv9-nn-Tne" firstAttribute="top" secondItem="mid-NB-7DT" secondAttribute="bottom" constant="16" id="0Mh-Fr-yXp"/>
                                             <constraint firstItem="YTX-8q-xHR" firstAttribute="leading" secondItem="Bmm-uv-eym" secondAttribute="leading" id="2Mx-BA-Mzj"/>
                                             <constraint firstItem="pRN-sy-kyO" firstAttribute="trailing" secondItem="Bmm-uv-eym" secondAttribute="trailing" id="5RT-Nf-vgw"/>
-                                            <constraint firstItem="Lv9-nn-Tne" firstAttribute="top" secondItem="Apq-7i-XTA" secondAttribute="bottom" constant="8" id="9PS-w2-lFI"/>
-                                            <constraint firstItem="Apq-7i-XTA" firstAttribute="leading" secondItem="Bmm-uv-eym" secondAttribute="leading" id="BQY-No-wjN"/>
                                             <constraint firstItem="mid-NB-7DT" firstAttribute="top" secondItem="YTX-8q-xHR" secondAttribute="top" id="E3b-ef-Mt5"/>
-                                            <constraint firstItem="Lv9-nn-Tne" firstAttribute="leading" secondItem="Apq-7i-XTA" secondAttribute="leading" id="GEK-WN-TXo"/>
-                                            <constraint firstItem="Apq-7i-XTA" firstAttribute="top" secondItem="YTX-8q-xHR" secondAttribute="bottom" constant="16" id="P4I-5Z-BIu"/>
-                                            <constraint firstItem="Lv9-nn-Tne" firstAttribute="trailing" secondItem="Apq-7i-XTA" secondAttribute="trailing" id="Pgg-Kp-CmF"/>
-                                            <constraint firstItem="Bmm-uv-eym" firstAttribute="leading" secondItem="Qxc-PW-YFe" secondAttribute="leading" constant="16" id="Q0J-By-ugk"/>
+                                            <constraint firstItem="Bmm-uv-eym" firstAttribute="leading" secondItem="Qxc-PW-YFe" secondAttribute="leading" constant="14" id="Q0J-By-ugk"/>
                                             <constraint firstItem="pRN-sy-kyO" firstAttribute="leading" secondItem="Bmm-uv-eym" secondAttribute="leading" id="WJn-pA-mVf"/>
                                             <constraint firstItem="pRN-sy-kyO" firstAttribute="top" secondItem="Bmm-uv-eym" secondAttribute="bottom" constant="2" id="Xsc-W6-kmF"/>
                                             <constraint firstAttribute="bottom" secondItem="Lv9-nn-Tne" secondAttribute="bottom" constant="8" id="a07-qI-J9u"/>
                                             <constraint firstItem="mid-NB-7DT" firstAttribute="leading" secondItem="YTX-8q-xHR" secondAttribute="trailing" constant="8" id="hsS-wb-hfu"/>
                                             <constraint firstItem="mid-NB-7DT" firstAttribute="bottom" secondItem="YTX-8q-xHR" secondAttribute="bottom" id="k15-LB-OvI"/>
-                                            <constraint firstItem="Apq-7i-XTA" firstAttribute="trailing" secondItem="Bmm-uv-eym" secondAttribute="trailing" id="oXe-lE-1xP"/>
                                             <constraint firstItem="YTX-8q-xHR" firstAttribute="top" secondItem="pRN-sy-kyO" secondAttribute="bottom" constant="8" id="uB3-fm-Q7N"/>
                                             <constraint firstItem="Bmm-uv-eym" firstAttribute="top" secondItem="Qxc-PW-YFe" secondAttribute="top" constant="16" id="ujI-yb-YFP"/>
-                                            <constraint firstAttribute="trailing" secondItem="Bmm-uv-eym" secondAttribute="trailing" constant="16" id="vaY-xs-9vG"/>
+                                            <constraint firstAttribute="trailing" secondItem="Bmm-uv-eym" secondAttribute="trailing" constant="14" id="vaY-xs-9vG"/>
+                                            <constraint firstItem="Lv9-nn-Tne" firstAttribute="leading" secondItem="Bmm-uv-eym" secondAttribute="leading" id="xez-Ve-taD"/>
+                                            <constraint firstItem="Lv9-nn-Tne" firstAttribute="trailing" secondItem="Bmm-uv-eym" secondAttribute="trailing" id="xgt-09-B2w"/>
                                             <constraint firstItem="mid-NB-7DT" firstAttribute="trailing" secondItem="Bmm-uv-eym" secondAttribute="trailing" id="xkj-46-LBn"/>
                                         </constraints>
                                     </view>
@@ -183,7 +174,7 @@
                         <viewControllerLayoutGuide type="bottom" id="Xiu-wQ-gnP"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="9V7-yi-GRX">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
@@ -216,7 +207,7 @@
                         <viewControllerLayoutGuide type="bottom" id="3Ug-QF-jXU"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="St1-rQ-6Ha">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
