--- a/books/Storyboards/SearchBooksEmptyDataset.xib
+++ b/books/Storyboards/SearchBooksEmptyDataset.xib
@@ -11,35 +11,35 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SearchBooksEmptyDataset" customModule="Reading_List" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="203"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="219"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="🔍 Search Books" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l4p-oO-OTM">
-                    <rect key="frame" x="8" y="8" width="359" height="43"/>
+                    <rect key="frame" x="16" y="16" width="343" height="43"/>
                     <fontDescription key="fontDescription" type="system" weight="thin" pointSize="36"/>
                     <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type anything to start searching: a title, an author, an ISBN - or a mixture!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MDN-K1-ihI">
-                    <rect key="frame" x="8" y="63" width="359" height="42.5"/>
+                    <rect key="frame" x="16" y="79" width="343" height="42.5"/>
                     <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                     <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PoweredByGoogle" translatesAutoresizingMaskIntoConstraints="NO" id="Wvj-q8-JKE">
-                    <rect key="frame" x="115" y="165" width="144" height="18"/>
+                    <rect key="frame" x="115" y="181" width="144" height="18"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="Wvj-q8-JKE" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="7rd-dV-7co"/>
-                <constraint firstAttribute="bottom" secondItem="Wvj-q8-JKE" secondAttribute="bottom" constant="20" id="Ycd-ze-Ne1"/>
-                <constraint firstAttribute="trailing" secondItem="l4p-oO-OTM" secondAttribute="trailing" constant="8" id="aJ6-bB-Rc9"/>
-                <constraint firstItem="l4p-oO-OTM" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="iwa-qD-3dR"/>
+                <constraint firstItem="l4p-oO-OTM" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="Pxj-g8-Lbm"/>
+                <constraint firstItem="Wvj-q8-JKE" firstAttribute="top" secondItem="MDN-K1-ihI" secondAttribute="bottom" constant="60" id="Ybd-Vn-weR"/>
+                <constraint firstAttribute="trailing" secondItem="l4p-oO-OTM" secondAttribute="trailing" constant="16" id="aJ6-bB-Rc9"/>
+                <constraint firstItem="l4p-oO-OTM" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="iwa-qD-3dR"/>
                 <constraint firstItem="MDN-K1-ihI" firstAttribute="leading" secondItem="l4p-oO-OTM" secondAttribute="leading" id="khn-FA-izm"/>
-                <constraint firstItem="MDN-K1-ihI" firstAttribute="top" secondItem="l4p-oO-OTM" secondAttribute="bottom" constant="12" id="mEN-bU-r8C"/>
-                <constraint firstItem="Wvj-q8-JKE" firstAttribute="top" secondItem="MDN-K1-ihI" secondAttribute="bottom" constant="60" id="tGU-Ji-4qJ"/>
-                <constraint firstItem="l4p-oO-OTM" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="tPp-WJ-31M"/>
+                <constraint firstAttribute="bottom" secondItem="Wvj-q8-JKE" secondAttribute="bottom" constant="20" id="kpa-LL-S47"/>
+                <constraint firstItem="MDN-K1-ihI" firstAttribute="top" secondItem="l4p-oO-OTM" secondAttribute="bottom" constant="20" id="mkM-OX-uIR"/>
                 <constraint firstItem="MDN-K1-ihI" firstAttribute="trailing" secondItem="l4p-oO-OTM" secondAttribute="trailing" id="xYx-GG-ucI"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -47,7 +47,7 @@
                 <outlet property="descriptionLabel" destination="MDN-K1-ihI" id="Ywt-Re-giJ"/>
                 <outlet property="titleLabel" destination="l4p-oO-OTM" id="zc5-1n-OLO"/>
             </connections>
-            <point key="canvasLocation" x="-10.5" y="-142.5"/>
+            <point key="canvasLocation" x="-10.5" y="-134.5"/>
         </view>
     </objects>
     <resources>
